<resources>
    <string name="app_name">IP3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
</resources>