<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="96dp"
        android:hint="@string/first_name"
        android:textSize="18sp"
        android:inputType="text"
        android:background="@drawable/edittext_background"
        android:textColor="@color/inputText"
        android:textColorHint="@color/placeholderText"
        android:layout_height="48dp"
        android:padding="12dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/surname_name"
        android:layout_width="match_parent"
        android:layout_below="@id/first_name"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/surname"
        android:textSize="18sp"
        android:inputType="text"
        android:background="@drawable/edittext_background"
        android:textColor="@color/inputText"
        android:textColorHint="@color/placeholderText"
        android:layout_height="48dp"
        android:padding="12dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_below="@id/surname_name"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:textSize="18sp"
        android:inputType="text"
        android:background="@drawable/edittext_background"
        android:textColor="@color/inputText"
        android:textColorHint="@color/placeholderText"
        android:layout_height="48dp"
        android:padding="12dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_below="@id/username"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:textColor="@color/inputText"
        android:textColorHint="@color/placeholderText"
        android:layout_height="48dp"
        android:padding="12dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_below="@id/password"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email_address"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:textColor="@color/inputText"
        android:textColorHint="@color/placeholderText"
        android:layout_height="48dp"
        android:padding="12dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_below="@id/email_address"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="32dp"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@color/textColor"
        android:textAllCaps="false"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_below="@id/sign_up"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:textSize="18sp"
        android:background="@drawable/button_background"
        android:text="@string/back"
        android:textColor="@color/textColor"
        android:textAllCaps="false"
        android:layout_height="48dp" />


</RelativeLayout>

</ScrollView>
